assets/styles/common/_global.scss
// import font
@font-face {
    font-family: 'ExistenceDayRegular';
    src: url('#{$asset-path}/fonts/existenceday-regular-webfont.eot');
    src: url('#{$asset-path}/fonts/existenceday-regular-webfont.eot?iefix') format('eot'),
         url('#{$asset-path}/fonts/existenceday-regular-webfont.woff') format('woff'),
         url('#{$asset-path}/fonts/existenceday-regular-webfont.ttf') format('truetype'),
         url('#{$asset-path}/fonts/existenceday-regular-webfont.svg#webfont1HIMHiVO') format('svg');
    font-weight: normal;
    font-style: normal;
}
$font-family-brand: 'ExistenceDayRegular';

body {
    background:#b1dbec url(#{$asset-path}/images/bgBodyLight.png) top left repeat-x;
    font: 14px/1.6em Verdana, sans-serif;
    color: #333;
}

h1,h2,h3,h4,h5,h6 {
  font-family: $font-family-brand;
  color: #21409A;
}

h2 {
    margin: 1.5em 0 24px 0;
    line-height: 1.2em;
}
h2.entry-title {
  margin-bottom:0;
}

// curvy borders
.main.curvy-border, .sidebar-primary .main.curvy-border { 
  padding-left:0;
  padding-right:0;
}

.curvy-border {
  border-image: url(#{$asset-path}/images/box.png) 16 19 15 16 stretch;
  border-width: 16px 19px 15px 16px;
  .inner-fix {
    padding: 15px;
    background-color:white;
  }
}

// text
.intro {
    font-size: 1.2em;
    color: #555;
    line-height: 1.4em;
}

.page-header {
  border:0;
  margin-bottom: 0;
  padding-bottom: 0;
}

// global layout
.sidebar-primary {

}

// responsive video 
.embed-container {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  overflow: hidden;
  max-width: 100%;
  width: 100%;
  iframe, object, embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}

.xd-alert {
  position: fixed;
  left: 0;
  top: 0;
  width: 400px;
  height: auto;
  padding:20px;
  font-family: $font-family-brand;
  font-size: 18px;
}

a[ng-click],span[ng-click] {
    cursor: pointer;
}

.vote-menu {
  position: absolute;
  ul {
    margin: 0;
    padding: 0;
    width: auto;
    li {
      display: inline;
      a.vote {
        display: block;
        float: left;
        clear: none;
        width: 29px;
        height: 47px;
        background:transparent url(#{$asset-path}/images/vote-sprite.png) top left no-repeat;
        text-indent: -9999px;  
      }
      a.vote.up {
        margin-right: 5px;
        background-position: 0 -47px;
      }
      a.vote.up:hover {
        background-position: 0 0;
      }
      a.vote.down {
        background-position: -29px -47px;
      }
      a.vote.down:hover {
        background-position: -29px 0;
      }
    }
  }
}
#idea-cloud {
  font-family: $font-family-brand;
  word-wrap: break-word;
  min-height: 600px;
  form {
    margin-top: 54px;
  }
  ul {
    display: none;
    list-style: none;
    padding-left: 0;
    margin-top: 43px;
    font-size:18px;
    li {
      display: inline;
      a {
        line-height: 1.7em;
        color: #21409A;
        vertical-align: middle;
        margin: 0 10px;
        transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.15s;
        &:hover { 
          text-decoration:none;
          color: $brand-green;
        }
      }

    }
    li.tickled a {
      color: $brand-green;
    }
  }
  #newIdea {
    font-size: 32px;
    padding: 8px;
    text-indent: 8px;
    width: calc(100% - 100px);
    float: left;
    border-width: 0px 0px 7px 0px;
    -moz-border-image: url(#{$asset-path}/images/division-horizontal.png) 0 0 7 0 stretch;
    -webkit-border-image: url(#{$asset-path}/images/division-horizontal.png) 0 0 7 0 stretch;
    -o-border-image: url(#{$asset-path}/images/division-horizontal.png) 0 0 7 0 stretch;
    border-image: url(#{$asset-path}/images/division-horizontal.png) 0 0 7 0 stretch;
    color: #555;
    line-height: 1.45;
  }
   #newIdea:focus {outline:0;}
}

.idea, .vote-menu {
  // preventing double click selection:
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  z-index: 9999!important;
}
#idea-cloud.fullscreen {
  text-align:justify;
  ul li {
    font-size: 120%;
  }
  form {
    width: 90%;
    margin: 0 auto;
    margin-top: 100px;
  }
}
.fullscreen {
  position: fixed; width: vw; height:vh; top: 0; right: 0; bottom: 0; left: 0;
  overflow-y: scroll;
  background-color:white;
  z-index: 11;
  padding: 0 3em 3em 3em;
  .idea {
     z-index: 12;
  }
}
blockquote {
  font-size: inherit;
}
// Breakpoints
@media (max-width: $screen-xs-max) { 
  .row.new-idea .col-sm-12 {
      padding-left:0px;
      padding-right:0px;
  }
  .full-screen-toggle {
    display: none;
  }
}
@media (min-width: $screen-sm-min) { 
}
@media (max-width: $screen-sm-max) { 
  .vote-menu {
    position: absolute;
    margin-top: -20px;
    margin-left: -12px;
    ul li {
      a.vote {
        display: block;
        float: left;
        clear: none;
        width: 61px;
        height: 87px;
        background:transparent url(#{$asset-path}/images/vote-sprite-x2.png) top left no-repeat;
        text-indent: -9999px;  
        background-size:200%;
      }
      a.vote.up {
        margin-right: 5px;
        background-position: 0 0;
      }
      a.vote.up:hover, a.vote.up.hover, {
        background-position: 0 -87px;
      }
      a.vote.down {
        background-position: -61px 0;
      }
      a.vote.down:hover {
        background-position: -61px -87px;
      }
    }
  }
  #doorbell-button {
    position:relative;
    float: right;
    margin-top: -40px;
  }
}
#doorbell-button { 
  background-color:#72CBE9;
  border: 3px solid #fff;
  border-bottom-width:0px;
  padding:8px inherit;
  font-family: $font-family-brand;
  font-size:18px;
}



// spinner
.xd-spinner {
  position:absolute;
  width: 96%;
  height: 400px;
  background: url(#{$asset-path}/images/XD64.png) 50% 50% no-repeat;
  -webkit-animation: rotation 2s infinite linear;
}
@-webkit-keyframes rotation {
  from {-webkit-transform: rotate(0deg);}
  to   {-webkit-transform: rotate(359deg);}
}

// animations 
.ng-enter {
  transition: 0.65s;
  opacity: 0;
}
.ng-enter-active {
  opacity: 1;
}
.ng-leave {
  transition: 0.5s;
  opacity: 1;

}
.ng-leave-active {
  opacity: 0;
}

@media (min-width: $screen-md-min) { 
  #idea-cloud.fullscreen form {
    width: 75%;
  } 
}
@media (max-width: $screen-md-max) {
}
@media (min-width: $screen-lg-min) { 
  #idea-cloud.fullscreen form {
    width: 50%;
  }
}

// xdicon classes
@font-face {
  font-family: 'xdicons';
  src:url('#{$asset-path}/fonts/xdicons.eot?p4113v');
  src:url('#{$asset-path}/fonts/xdicons.eot?p4113v#iefix') format('embedded-opentype'),
    url('#{$asset-path}/fonts/xdicons.ttf?p4113v') format('truetype'),
    url('#{$asset-path}/fonts/xdicons.woff?p4113v') format('woff'),
    url('#{$asset-path}/fonts/xdicons.svg?p4113v#xdicons') format('svg');
  font-weight: normal;
  font-style: normal;
}

[class^="xdico-"], [class*=" xdico-"] {
    /* use !important to prevent issues with browser extensions that change fonts */
  font-family: 'xdicons' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
}

.xdico-chev-r:before {
  content: "\e907";
}
.xdico-chev-l:before {
  content: "\e908";
}
.xdico-fullscreen2:before {
  content: "\e906";
}
.xdico-chev-u:before {
  content: "\e900";
}
.xdico-chev-d:before {
  content: "\e901";
}
.xdico-close:before {
  content: "\e902";
}
.xdico-rarr:before {
  content: "\e903";
}
.xdico-larr:before {
  content: "\e904";
}
.xdico-fullscreen:before {
  content: "\e905";
}

